--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-# Compiled class file
+# Java
 *.class
+target/
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
+# Intellij Idea
+.idea
+*.iml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,11 +12,7 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
